--- a/templates/home.html
+++ b/templates/home.html
@@ -526,8 +526,13 @@
             <!-- Hourly Search Form -->
             <form class="search-form hourly-form active" id="hourly-form" action="{{ url_for('renter.search') }}" method="GET">
             <input type="hidden" name="booking_type" value="hourly">
+            <!-- Hidden inputs for guest counts -->
+            <input type="hidden" name="adults" id="adults-input-hourly" value="1">
+            <input type="hidden" name="children" id="children-input-hourly" value="0">
+            <input type="hidden" name="rooms" id="rooms-input-hourly" value="1">
+            
             <div class="row g-3 align-items-end">
-                                <div class="col-xxl-4 col-xl-3 col-lg-4 col-md-6">
+                <div class="col-xxl-4 col-xl-3 col-lg-4 col-md-6">
                     <label for="location-hourly" class="form-label">Địa điểm hoặc tên homestay</label>
                     <div class="location-selector">
                         <input type="text" class="form-control location-input" id="location-hourly" name="location" 
@@ -540,21 +545,20 @@
                 <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3">
                     <label for="checkin-hourly" class="form-label">Ngày nhận phòng</label>
                     <input type="date" class="form-control" id="checkin-hourly" name="checkin_date">
-            </div>
+                </div>
                 <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3">
                     <label for="checkin-time-hourly" class="form-label">Giờ nhận phòng</label>
                     <input type="time" class="form-control" id="checkin-time-hourly" name="checkin_time">
-            </div>
+                </div>
                 <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-3">
                     <label for="checkout-time-hourly" class="form-label">Giờ trả phòng</label>
                     <input type="time" class="form-control" id="checkout-time-hourly" name="checkout_time">
                 </div>
                 <div class="col-xxl-4 col-xl-3 col-lg-3 col-md-3">
                     <label for="guests-rooms-hourly" class="form-label">Khách và Phòng</label>
-                <div class="guest-selector">
-                        <input type="text" class="form-control guest-display" id="guests-rooms-hourly" name="guests_rooms" 
+                    <input type="text" class="form-control guest-display" id="guests-rooms-hourly" 
                            value="1 người lớn, 0 Trẻ em, 1 phòng" readonly>
-                        <div class="guest-dropdown" id="guest-dropdown-hourly">
+                    <div class="guest-dropdown" id="guest-dropdown-hourly">
                         <div class="guest-row">
                             <div class="guest-info">
                                 <i class="bi bi-person-fill text-success"></i>
@@ -562,7 +566,7 @@
                             </div>
                             <div class="guest-controls">
                                 <button type="button" class="btn-decrease" data-target="adults">−</button>
-                                    <span class="guest-count" id="adults-count-hourly">1</span>
+                                <span class="guest-count" id="adults-count-hourly">1</span>
                                 <button type="button" class="btn-increase" data-target="adults">+</button>
                             </div>
                         </div>
@@ -573,7 +577,7 @@
                             </div>
                             <div class="guest-controls">
                                 <button type="button" class="btn-decrease" data-target="children">−</button>
-                                    <span class="guest-count" id="children-count-hourly">0</span>
+                                <span class="guest-count" id="children-count-hourly">0</span>
                                 <button type="button" class="btn-increase" data-target="children">+</button>
                             </div>
                         </div>
@@ -584,7 +588,7 @@
                             </div>
                             <div class="guest-controls">
                                 <button type="button" class="btn-decrease" data-target="rooms">−</button>
-                                    <span class="guest-count" id="rooms-count-hourly">1</span>
+                                <span class="guest-count" id="rooms-count-hourly">1</span>
                                 <button type="button" class="btn-increase" data-target="rooms">+</button>
                             </div>
                         </div>
@@ -593,12 +597,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
                 <div class="col-xxl-1 col-xl-2 col-lg-12 col-md-6 search-btn-col d-flex justify-content-center">
                     <button type="submit" class="btn search-btn" style="white-space: nowrap; min-width: 100px;">Tìm kiếm</button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
         
         <!-- Daily Search Form -->
         <form class="search-form daily-form" id="daily-form" action="{{ url_for('renter.search') }}" method="GET">
@@ -1243,9 +1246,10 @@ document.addEventListener('DOMContentLoaded', function() {
                 
                 // Update display
                 document.getElementById(`${target}-count-${formType}`).textContent = guestCounts[target];
-                updateGuestDisplayForForm(formType, guestCounts, guestDisplay);
+                // Update hidden inputs
+                document.getElementById(`${target}-input-${formType}`).value = guestCounts[target];
                 
-                // Update button states
+                updateGuestDisplayForForm(formType, guestCounts, guestDisplay);
                 updateButtonStates(formType, guestCounts);
             });
         });
